--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-canonical-urls": "^2.3.1",
     "gatsby-plugin-emotion": "^4.3.1",
+    "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.1",
     "gatsby-plugin-sharp": "^2.6.3",
@@ -61,7 +62,6 @@
     "typescript": "^3.9.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@types/classnames": "^2.2.8",
     "@types/node": "^12.0.10",
     "@types/react": "^16.9.35",
@@ -74,7 +74,6 @@
     "eslint-config-blvd": "^0.1.1",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "gh-pages": "^2.0.1",
     "prettier": "^1.18.2",
     "react-responsive-carousel": "^3.1.49",
     "rimraf": "^2.6.3"
